# conveyor-gate

./: .gitignore  .gitmodules  README.md
src/box_detector/: CMakeLists.txt  package.xml
src/box_detector/include/box_detector/: color_detector_node.hpp
src/box_detector/src/: color_detector_node.cpp
src/conveyor_autospawn/: CMakeLists.txt  package.xml
src/conveyor_autospawn/include/conveyor_autospawn/: conveyor_autospawn_node.hpp
src/conveyor_autospawn/launch/: conveyor_autospawn.launch.py
src/conveyor_autospawn/src/: conveyor_autospawn_node.cpp
src/conveyor_bringup/: CMakeLists.txt  package.xml
src/conveyor_bringup/launch/: sim_autospawn_with_detector.launch.py
src/swing_arm_controller_node/: CMakeLists.txt  package.xml
src/swing_arm_controller_node/include/swing_arm_controller_node/: swing_arm_controller_node.hpp
src/swing_arm_controller_node/src/: swing_arm_controller_node.cpp
