<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>conveyor_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jacob.matthew.nash@gmail.com">jacob</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>conveyorbelt_gazebo</exec_depend>
  <exec_depend>conveyor_autospawn </exec_depend>
  <exec_depend>box_detector</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
